fixed alignment of fold markers and line numbers. Fixed minor bug when collapsing ranges with no spaces in between the ranges

--- a/main.less
+++ b/main.less
@@ -1,7 +1,11 @@
 .cm-thehogfather-codefolding {
     cursor: pointer;
+    color: #777;
 }
 
+.cm-thehogfather-codefolding span{
+    padding-left: 3px;
+}
 .cm-s-default .cm-thehogfather-codefolding-collapsed {
     .cm-thehogfather-codefolding;
 }
@@ -12,6 +16,10 @@
 
 .cm-s-default div.CodeMirror-gutter {
     min-width: 4.0em;
+}
+
+.cm-s-default .CodeMirror-linenumber{
+    margin-left: -10px!important;
 }
 
 .CodeMirror-foldmarker {
